# Algorithms_and_Samples

./: CMakeLists.txt  main.cpp
Algorithms/Search/BinarySearch/: CMakeLists.txt  main.cpp
Algorithms/Search/LinearSearch/: CMakeLists.txt  main.cpp
Algorithms/Sorting/InsertionSorting/: CMakeLists.txt  main.cpp
Algorithms/Sorting/QuickSorting/: CMakeLists.txt  main.cpp
Algorithms/Sorting/SelectionSorting/: CMakeLists.txt  main.cpp
DataStructures/ComplexNumber/: CMakeLists.txt  ComplexNumber.h  main.cpp
DataStructures/List/: CMakeLists.txt  List.h  main.cpp
DataStructures/Stack/: CMakeLists.txt  main.cpp
OopPatterns/Singleton/: main.cpp
